Migrate to widget library and add run time configuration prefix for selection widget and media library

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
       // Data source config for resource loader. This is a pattern for the resource getters
       // DATASTREAM = 'local' // 'remote'
 
+      // Configuration for the third party widgets used.
+      PSTJ = {
+        WIDGET: {
+          SELECT: {
+            DEFAULT_IMAGE: 'assets/def-mov.png'
+          }
+        }
+      };
       // App specific config
       SYSMASTER = {
         TIMELINE: {
@@ -25,6 +33,9 @@
             MAIN_PERIOD : 86400,
             MAX_SCALE_FACTOR : 800,
             SCALE_HEIGHT : 30
+          },
+          MEDIA_LIBRARY: {
+            //DEFAULT_LIBRARY_ITEM_THUMBNAIL: 'assets/video-file.png'
           }
         }
       };
