Use configurable opacity on inactive periods

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             DELIMITER_COLOR : '#06b3ec',
             MAIN_PERIOD : 86400,
             MAX_SCALE_FACTOR : 800,
-            SCALE_HEIGHT : 30
+            SCALE_HEIGHT : 30,
+            INACTIVE_ITEM_OPACITY: 0.85
           },
           MEDIA_LIBRARY: {
             //DEFAULT_LIBRARY_ITEM_THUMBNAIL: 'assets/video-file.png'
